// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bag page Container should render modal when open true 1`] = `
<ModalNative
  customTransparent={true}
  isOpen={true}
  isOverlay={false}
>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(TouchableOpacity)
          onPress={[MockFunction]}
        >
          <Styled(Image)
            source={
              Object {
                "testUri": "../../../../core/src/assets/close.png",
              }
            }
          />
        </Styled(TouchableOpacity)>
      </Styled(View)>
      <Styled(Text)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          textAlign="center"
          textDecoration={null}
        />
      </Styled(Text)>
      <Styled(Text)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          mobileFontFamily="secondary"
          numberOfLines={null}
          textAlign="center"
          textDecoration={null}
        />
      </Styled(Text)>
      <Styled(View)>
        <Styled(WithTheme(CustomButton))
          buttonVariation="variable-width"
          color="white"
          fill="BLUE"
          type="submit"
        />
      </Styled(View)>
      <Styled(View)>
        <Styled(WithTheme(CustomButton))
          buttonVariation="variable-width"
          color="gray"
          fill="WHITE"
          fontWeight="extrabold"
          type="submit"
        />
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</ModalNative>
`;

exports[`Bag page Container should render no modal when isOpen is false 1`] = `
<ModalNative
  customTransparent={true}
  isOpen={false}
  isOverlay={false}
>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(TouchableOpacity)
          onPress={[MockFunction]}
        >
          <Styled(Image)
            source={
              Object {
                "testUri": "../../../../core/src/assets/close.png",
              }
            }
          />
        </Styled(TouchableOpacity)>
      </Styled(View)>
      <Styled(Text)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          textAlign="center"
          textDecoration={null}
        />
      </Styled(Text)>
      <Styled(Text)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          mobileFontFamily="secondary"
          numberOfLines={null}
          textAlign="center"
          textDecoration={null}
        />
      </Styled(Text)>
      <Styled(View)>
        <Styled(WithTheme(CustomButton))
          buttonVariation="variable-width"
          color="white"
          fill="BLUE"
          type="submit"
        />
      </Styled(View)>
      <Styled(View)>
        <Styled(WithTheme(CustomButton))
          buttonVariation="variable-width"
          color="gray"
          fill="WHITE"
          fontWeight="extrabold"
          type="submit"
        />
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</ModalNative>
`;
